Add LevelStorage and fetching runs by submission time, add Coverage.md